--- a/src/components/ui/NavPrimary.astro
+++ b/src/components/ui/NavPrimary.astro
@@ -305,6 +305,9 @@ padding-bottom: 10px;
 padding-top: 10px;
 }
 
+ul li:last-child {
+  font-weight: var(--font-weight-semibold);
+}
 
 
 .nav-links-container{
