--- a/src/components/ui/NavSecondary.astro
+++ b/src/components/ui/NavSecondary.astro
@@ -95,7 +95,9 @@ justify-content: center;
 }
 
 
-
+ul li:last-child {
+  font-weight: var(--font-weight-semibold);
+}
 .nav-links-container{
         display: flex;
         flex-direction: row;
