--- a/src/pages/foraeldre.astro
+++ b/src/pages/foraeldre.astro
@@ -59,14 +59,15 @@ import BrevkasseCard from "../components/cards/BrevkasseCard.astro";
       <div>
         <p class="indicator">8 ud af 129</p>
         <div class="lettercontainer">
-          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
-          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
-          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
-          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
-          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
-          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
-          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
-          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
+          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" category="Brev" />
+          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" category="Brev"/>
+          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" category="Brev"/>
+          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" category="Brev"/>
+          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" category="Brev"/>
+          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" category="Brev"/>
+          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" category="Brev"/>
+          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" category="Brev"/>
+		  <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" category="Brev"/>
         </div>
         <div class="margintop button-container">
           <Button text="Læs flere" />
