--- a/src/pages/main.astro
+++ b/src/pages/main.astro
@@ -9,7 +9,7 @@ import Button from "../components/ui/Button.astro";
 <GirlsUniLayout title="Pigeunivers">
   <div class="girls-frontpage-layout">
     <section class="gu-herosection">
-      <img src="/images/heroimages/girlsfrontpage.png" alt="Pigeunivers billede og overskrift" />
+      <img src="/images/heroimages/girlsfrontpage.webp" alt="Pigeunivers billede og overskrift" />
     </section>
 
     <div class="medier-second-section">
