--- a/src/pages/medier.astro
+++ b/src/pages/medier.astro
@@ -21,8 +21,8 @@ import Dropdown from "../components/ui/Dropdown.astro"
 			af venskaber kan være svær at sammensætte, men også fyldt af farverige glæder?</p></a>
 	</section>
 	<section class="doublearticlecard">
-	<a href="#">	<ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.jpg" /></a>
-		<a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.jpg" /></a>
+	<a href="#">	<ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.webp" /></a>
+		<a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.webp" /></a>
 	</section>
 </div>
 <div class="medier-podcast-section">
