--- a/src/pages/foraeldre.astro
+++ b/src/pages/foraeldre.astro
@@ -11,12 +11,19 @@ import BrevkasseCard from "../components/cards/BrevkasseCard.astro";
     <div class="mobilehero">
       <h1 class="primary-header">Forældre</h1>
       <h2 class="subheader">Rådgivning for forældre og pårørende</h2>
-      <img src="/images/heroimages/mom-girl-hug.webp" alt="Mor og pige krammer" />
+      <img
+        src="/images/heroimages/mom-girl-hug.webp"
+        alt="Mor og pige krammer"
+      />
       <p>
-        Hos vores rådgivning kan du få gode råd og inspiration til alt fra opdragelse og grænsesætning, til hvordan du som forælder eller anden pårørende tackler lavt selvværd, ensomhed, selvmordstanker, selvskade og spiseforstyrrelser.
+        Hos vores rådgivning kan du få gode råd og inspiration til alt fra
+        opdragelse og grænsesætning, til hvordan du som forælder eller anden
+        pårørende tackler lavt selvværd, ensomhed, selvmordstanker, selvskade og
+        spiseforstyrrelser.
         <br />
         <br />
-        På denne side kan du søge hjælp via telefonrådgivning, eller læse og skrive til forældrebrevkassen.
+        På denne side kan du søge hjælp via telefonrådgivning, eller læse og skrive
+        til forældrebrevkassen.
       </p>
     </div>
     <div class="desktophero">
@@ -24,20 +31,36 @@ import BrevkasseCard from "../components/cards/BrevkasseCard.astro";
         <h1 class="primary-header">Forældre</h1>
         <h2 class="subheader">Rådgivning for forældre og pårørende</h2>
         <p>
-          Hos vores rådgivning kan du få gode råd og inspiration til alt fra opdragelse og grænsesætning, til hvordan du som forælder eller anden pårørende tackler lavt selvværd, ensomhed, selvmordstanker, selvskade og spiseforstyrrelser.
+          Hos vores rådgivning kan du få gode råd og inspiration til alt fra
+          opdragelse og grænsesætning, til hvordan du som forælder eller anden
+          pårørende tackler lavt selvværd, ensomhed, selvmordstanker, selvskade
+          og spiseforstyrrelser.
           <br />
           <br />
-          På denne side kan du søge hjælp via telefonrådgivning, eller læse og skrive til forældrebrevkassen.
+          På denne side kan du søge hjælp via telefonrådgivning, eller læse og skrive
+          til forældrebrevkassen.
         </p>
       </div>
       <div>
-        <img src="/images/heroimages/mom-girl-hug.webp" alt="Mor og pige krammer" />
+        <img
+          src="/images/heroimages/mom-girl-hug.webp"
+          alt="Mor og pige krammer"
+        />
       </div>
     </div>
     <div class="section-2">
-      <BoxColorButton color="purple" title="Telefonrådgivning" text="book rådgivning" style="dark" size="m-small-d-large">
+      <BoxColorButton
+        color="purple"
+        title="Telefonrådgivning"
+        text="book rådgivning"
+        style="dark"
+        size="m-small-d-large"
+      >
         <p slot="description">
-          Hos vores rådgivning kan du få gode råd og inspiration til alt fra opdragelse og grænsesætning, til hvordan du som forælder eller anden pårørende tackler lavt selvværd, ensomhed, selvmordstanker, selvskade og spiseforstyrrelser.
+          Hos vores rådgivning kan du få gode råd og inspiration til alt fra
+          opdragelse og grænsesætning, til hvordan du som forælder eller anden
+          pårørende tackler lavt selvværd, ensomhed, selvmordstanker, selvskade
+          og spiseforstyrrelser.
         </p>
         <p slot="description">Book en samtale, så ringer vi dig op.</p>
       </BoxColorButton>
@@ -46,10 +69,19 @@ import BrevkasseCard from "../components/cards/BrevkasseCard.astro";
       <div class="section-3-top">
         <div class="flex-gap">
           <h2 class="subheader">Forældrebrevkassen</h2>
-          <p>I brevkassen svarer vi på alle dine spørgsmål relateret til piger og unge kvinder mellem 12 og 24 år. Skriv til vores brevkasse eller læs andres spørgsmål.</p>
+          <p>
+            I brevkassen svarer vi på alle dine spørgsmål relateret til piger og
+            unge kvinder mellem 12 og 24 år. Skriv til vores brevkasse eller læs
+            andres spørgsmål.
+          </p>
         </div>
         <div class="button-container button-container-end">
-          <Button text="Skriv til brevkassen" style="dark" size="m-small-d-large" link="https://jpmpz0xim6i.typeform.com/to/JjBBzzKN" />
+          <Button
+            text="Skriv til brevkassen"
+            style="dark"
+            size="m-small-d-large"
+            link="https://jpmpz0xim6i.typeform.com/to/JjBBzzKN"
+          />
         </div>
       </div>
       <div class="search-container">
@@ -59,15 +91,42 @@ import BrevkasseCard from "../components/cards/BrevkasseCard.astro";
       <div>
         <p class="indicator">8 ud af 129</p>
         <div class="lettercontainer">
-          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" category="Brev" />
-          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" category="Brev"/>
-          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" category="Brev"/>
-          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" category="Brev"/>
-          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" category="Brev"/>
-          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" category="Brev"/>
-          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" category="Brev"/>
-          <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" category="Brev"/>
-		  <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" category="Brev"/>
+          <BrevkasseCard
+            header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+            category="Brev"
+          />
+          <BrevkasseCard
+            header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+            category="Brev"
+          />
+          <BrevkasseCard
+            header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+            category="Brev"
+          />
+          <BrevkasseCard
+            header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+            category="Brev"
+          />
+          <BrevkasseCard
+            header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+            category="Brev"
+          />
+          <BrevkasseCard
+            header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+            category="Brev"
+          />
+          <BrevkasseCard
+            header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+            category="Brev"
+          />
+          <BrevkasseCard
+            header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+            category="Brev"
+          />
+          <BrevkasseCard
+            header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+            category="Brev"
+          />
         </div>
         <div class="margintop button-container">
           <Button text="Læs flere" />
@@ -135,8 +194,8 @@ import BrevkasseCard from "../components/cards/BrevkasseCard.astro";
   .lettercontainer {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    gap: var(--spacing-small);
+    justify-content: space-between;
+    gap: var(--spacing-medium);
     max-width: 1150px;
   }
 
