--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ import BoxColorButton from "../components/ui/BoxColorButton.astro";
     <div class="index-bottom-section">
       <section class="first-bottom-section">
         <h2 class="subheader">Lær os bedre at kende</h2>
-        <p>
+        <p class="p-max">
           Siden vores stiftelse i 2004 har vi haft tusindvis af samtaler med piger, der ikke tør dele deres tanker, og oplevelser med andre. Vi står med en generation af piger, der stræber efter at være perfekte udadtil og som føler sig alene med alt
           det, der er svært. I samarbejde med vores mange støtter og samarbejdspartnere arbejder vi for at bremse den udvikling og for at sikre, at alle piger har en at tale med.
         </p>
@@ -122,6 +122,9 @@ import BoxColorButton from "../components/ui/BoxColorButton.astro";
     align-self: flex-end;
   }
 
+  .p-max{
+max-width: 450px;
+  }
   .bottom-section-image img {
     width: 100%;
     border-radius: 8px;
@@ -161,12 +164,17 @@ import BoxColorButton from "../components/ui/BoxColorButton.astro";
   @media only screen and (min-width: 900px) {
     .indexlayout {
       padding: 30px 80px;
+      gap: 80px;
     }
+
+
+
   }
 
   @media only screen and (min-width: 1100px) {
     .indexlayout {
       padding: 30px 140px;
     }
+
   }
 </style>
