--- a/src/pages/medier.astro
+++ b/src/pages/medier.astro
@@ -17,16 +17,16 @@ import Dropdown from "../components/ui/Dropdown.astro";
     <div class="medier-first-section">
       <section class="largearticlecard">
         <a href="#">
-          <img src="images/articleimages/largearticleimage.png" alt="Hvordan vander vi venskabets blomst? Artikel" />
+          <img src="/images/articleimages/largearticleimage.webp" alt="Hvordan vander vi venskabets blomst? Artikel" />
           <p class="subheader-firstarticle">Jagten på den perfekte buket af venskaber kan være svær at sammensætte, men også fyldt af farverige glæder?</p></a
         >
       </section>
       <section class="doublearticlecard">
-        <a href="#"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.jpg" /></a>
-        <a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.jpg" /></a>
+        <a href="#"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="/images/articleimages/redbluegirlarticle.webp" /></a>
+        <a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="/images/articleimages/banana.webp" /></a>
       </section>
       <div class="medier-podcast-section">
-        <a href="#"><img src="images/articleimages/podcastimage.jpg" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber" /></a>
+        <a href="#"><img src="/images/articleimages/podcastimage.webp" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber" /></a>
       </div>
     </div>
 
@@ -34,15 +34,15 @@ import Dropdown from "../components/ui/Dropdown.astro";
       <h2 class="sub-header-underlined">Tema: Venskaber og Familie</h2>
       <div class="medier-second-grid">
         <section class="mediumarticlecard">
-          <a class="hoverstate" href="#"><img src="images/articleimages/bananaarticle.png" alt="Artikel hvordan onanerer man?" /></a>
+          <a class="hoverstate" href="#"><img src="/images/articleimages/bananaarticle.webp" alt="Artikel hvordan onanerer man?" /></a>
         </section>
         <section class="double-articlecard-second">
-          <a href="#"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.jpg" /></a>
-          <a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.jpg" /></a>
+          <a href="#"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="/images/articleimages/redbluegirlarticle.webp" /></a>
+          <a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="/images/articleimages/banana.webp" /></a>
         </section>
       </div>
       <div class="medier-podcast-section">
-        <a href="#"><img src="images/articleimages/podcastimage.jpg" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber" /></a>
+        <a href="#"><img src="/images/articleimages/podcastimage.webp" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber" /></a>
       </div>
     </div>
 
@@ -50,15 +50,15 @@ import Dropdown from "../components/ui/Dropdown.astro";
       <h2 class="sub-header-underlined">Tema: Krop og Sex</h2>
       <div class="medier-fourth-grid">
         <section class="mediumarticlecard">
-          <a class="hoverstate" href="#"><img src="images/articleimages/bananaarticle.png" alt="Artikel hvordan onanerer man?" /></a>
+          <a class="hoverstate" href="#"><img src="/images/articleimages/bananaarticle.webp" alt="Artikel hvordan onanerer man?" /></a>
         </section>
         <section class="double-articlecard-second">
-          <a href="#"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.jpg" /></a>
-          <a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.jpg" /></a>
+          <a href="#"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="/images/articleimages/redbluegirlarticle.webp" /></a>
+          <a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="/images/articleimages/banana.webp" /></a>
         </section>
       </div>
       <div class="medier-podcast-section">
-        <a href="/specificartclepage.astro"><img src="images/articleimages/podcastimage.jpg" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber" /></a>
+        <a href="/specificartclepage.astro"><img src="/images/articleimages/podcastimage.webp" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber" /></a>
       </div>
     </div>
 
@@ -66,15 +66,15 @@ import Dropdown from "../components/ui/Dropdown.astro";
       <h2 class="sub-header-underlined">Tema: Selvværd</h2>
       <div class="medier-fourth-grid">
         <section class="mediumarticlecard">
-          <a class="hoverstate" href="#"><img src="images/articleimages/bananaarticle.png" alt="Artikel hvordan onanerer man?" /></a>
+          <a class="hoverstate" href="#"><img src="/images/articleimages/bananaarticle.webp" alt="Artikel hvordan onanerer man?" /></a>
         </section>
         <section class="double-articlecard-second">
-          <a href="#"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.jpg" /></a>
-          <a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.jpg" /></a>
+          <a href="#"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="/images/articleimages/redbluegirlarticle.webp" /></a>
+          <a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="/images/articleimages/banana.webp" /></a>
         </section>
       </div>
       <div class="medier-podcast-section">
-        <a href="/specificartclepage.astro"><img src="images/articleimages/podcastimage.jpg" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber" /></a>
+        <a href="/specificartclepage.astro"><img src="/images/articleimages/podcastimage.webp" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber" /></a>
       </div>
     </div>
 
@@ -82,15 +82,15 @@ import Dropdown from "../components/ui/Dropdown.astro";
       <h2 class="sub-header-underlined">Tema: Kærlighed</h2>
       <div class="medier-fourth-grid">
         <section class="mediumarticlecard">
-          <a class="hoverstate" href="#"><img src="images/articleimages/bananaarticle.png" alt="Artikel hvordan onanerer man?" /></a>
+          <a class="hoverstate" href="#"><img src="/images/articleimages/bananaarticle.webp" alt="Artikel hvordan onanerer man?" /></a>
         </section>
         <section class="double-articlecard-second">
-          <a href="#"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.jpg" /></a>
-          <a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.jpg" /></a>
+          <a href="#"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="/images/articleimages/redbluegirlarticle.webp" /></a>
+          <a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="/images/articleimages/banana.webp" /></a>
         </section>
       </div>
       <div class="medier-podcast-section">
-        <a href="/specificartclepage.astro"><img src="images/articleimages/podcastimage.jpg" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber" /></a>
+        <a href="/specificartclepage.astro"><img src="/images/articleimages/podcastimage.webp" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber" /></a>
       </div>
     </div>
 
@@ -98,15 +98,15 @@ import Dropdown from "../components/ui/Dropdown.astro";
       <h2 class="sub-header-underlined">Tema: Trivsel</h2>
       <div class="medier-fourth-grid">
         <section class="mediumarticlecard">
-          <a class="hoverstate" href="#"><img src="images/articleimages/bananaarticle.png" alt="Artikel hvordan onanerer man?" /></a>
+          <a class="hoverstate" href="#"><img src="/images/articleimages/bananaarticle.webp" alt="Artikel hvordan onanerer man?" /></a>
         </section>
         <section class="double-articlecard-second">
-          <a href="#"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.jpg" /></a>
-          <a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.jpg" /></a>
+          <a href="#"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="/images/articleimages/redbluegirlarticle.webp" /></a>
+          <a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="/images/articleimages/banana.webp" /></a>
         </section>
       </div>
       <div class="medier-podcast-section">
-        <a href="/specificartclepage.astro"><img src="images/articleimages/podcastimage.jpg" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber" /></a>
+        <a href="/specificartclepage.astro"><img src="/images/articleimages/podcastimage.webp" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber" /></a>
       </div>
     </div>
 
@@ -114,15 +114,15 @@ import Dropdown from "../components/ui/Dropdown.astro";
       <h2 class="sub-header-underlined">Tema: Skole og uddannelse</h2>
       <div class="medier-fourth-grid">
         <section class="mediumarticlecard">
-          <a class="hoverstate" href="#"><img src="images/articleimages/bananaarticle.png" alt="Artikel hvordan onanerer man?" /></a>
+          <a class="hoverstate" href="#"><img src="/images/articleimages/bananaarticle.webp" alt="Artikel hvordan onanerer man?" /></a>
         </section>
         <section class="double-articlecard-second">
-          <a href="#"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.jpg" /></a>
-          <a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.jpg" /></a>
+          <a href="#"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="/images/articleimages/redbluegirlarticle.webp" /></a>
+          <a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="/images/articleimages/banana.webp" /></a>
         </section>
       </div>
       <div class="medier-podcast-section">
-        <a href="/specificartclepage.astro"><img src="images/articleimages/podcastimage.jpg" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber" /></a>
+        <a href="/specificartclepage.astro"><img src="/images/articleimages/podcastimage.webp" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber" /></a>
       </div>
     </div>
 
@@ -130,15 +130,15 @@ import Dropdown from "../components/ui/Dropdown.astro";
       <h2 class="sub-header-underlined">Tema: Andet</h2>
       <div class="medier-fourth-grid">
         <section class="mediumarticlecard">
-          <a class="hoverstate" href="#"><img src="images/articleimages/bananaarticle.png" alt="Artikel hvordan onanerer man?" /></a>
+          <a class="hoverstate" href="#"><img src="/images/articleimages/bananaarticle.webp" alt="Artikel hvordan onanerer man?" /></a>
         </section>
         <section class="double-articlecard-second">
-          <a href="#"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.jpg" /></a>
-          <a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.jpg" /></a>
+          <a href="#"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="/images/articleimages/redbluegirlarticle.webp" /></a>
+          <a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="/images/articleimages/banana.webp" /></a>
         </section>
       </div>
       <div class="medier-podcast-section">
-        <a href="/specificartclepage.astro"><img src="images/articleimages/podcastimage.jpg" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber" /></a>
+        <a href="/specificartclepage.astro"><img src="/images/articleimages/podcastimage.webp" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber" /></a>
       </div>
     </div>
   </div>
