--- a/src/pages/stot.astro
+++ b/src/pages/stot.astro
@@ -100,6 +100,7 @@ import ButtonDonate from "../components/ui/ButtonDonate.astro";
   img {
     max-width: 100%;
     align-self: center;
+    border-radius: 15px;
   }
 
   .donate-section {
