--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -1,10 +1,5 @@
 ---
-
-
 import Button from "./Button.astro";
-
-
-
 ---
 <footer>
   <section class="footer_newsletter">
@@ -20,7 +15,7 @@ import Button from "./Button.astro";
       <input type="email" id="email" name="email" class="dark" />
     </div>
     <div class="button-wrapper">
-    <Button size="extra-small" text="Tilmeld dig"  />
+    <Button size="extra-small" text="Tilmeld dig" extraInfo="the-button"  />
   </div>
   </form>
 </div> 
